tests/outref/TSS03.ref
  # Sub-query that returns 1 row, 1 column (i.e. a scalar) and type match
SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName FROM names b WHERE a.id = b.id);
SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName FROM names b WHERE a.id = b.id);
  # Misc queries
SELECT * FROM names n1 WHERE n1.firstName = (SELECT n2.firstname FROM names n2 WHERE n2.firstname = n1.firstname);
SELECT * FROM names n1 WHERE n1.firstName = (SELECT n2.firstname FROM names n2 WHERE n2.firstname = n1.firstname limit 1);
SELECT * FROM names n1 WHERE n1.firstName = (SELECT n2.firstname FROM names n2 WHERE n2.firstname != n1.firstname limit 1);
SELECT * FROM names n1 WHERE 'Zero' = (SELECT n2.firstname FROM names n2 WHERE n2.firstname != n1.firstname limit 1);
SELECT * FROM names n1 WHERE n1.firstName IN (SELECT n2.firstname FROM names n2 WHERE n2.firstname = n1.firstname limit 1);
SELECT * from names n1 where n1.id IN (SELECT * FROM names n2 WHERE n2.id = ((n1.id + 1) % 6));
  # Sub-query that returns 1 row, 1 column (i.e. a scalar) and type match. Use a sub-query wherever a scalar is possible
select * from names where id = 1+(select 1 from names limit 1);
select (case when id > (select 1) then (select 1) else (select 0) end)-1 as idbool from names;
select (select 1 from names limit 1)%(select 2 from names limit 1);
select (select 1 from names limit 1)*(select 2 from names limit 1)/3;
select (select 1 from names limit 1)-(select 2 from names limit 1)+3;
select 4/(select 2 from names limit 1)-3;
select (select 1 from names limit 1)*(select 2 from names limit 1)*3;
select 3%(select 2 from names limit 1)+3;
select id+(select 2 from names limit 1) from names;
select id*(select 2 from names limit 1) from (select id from names) as n2;
select id/(select 2 from names) from (select id from names) as n2;
select 2*(select id*id from names) from (select id from names) as n2;
select 2+(select * from ((select id from names) union (select id from names)) as n1 limit 1) from (select id from names) as n2;
select 2-(select * from ((select id from names) union (select 2::integer from names)) as n1 limit 1) from (select id from names) as n2;
select (case when id > (select 1 from names limit 1) then 1 else 0 end)+1 as idbool from names;
select (select 1 from names limit 1)*(case when id > 1 then 1 else 0 end) as idbool from names;
select id-(id*(select 2 from names limit 1)) from names;
select (select firstname from names limit 1) || (select lastname from names limit 1);
  # Sub-query that returns 1 row, 1 column (i.e. a scalar) and type mismatch
SELECT * FROM names a WHERE a.firstName = (SELECT b.id FROM names b WHERE a.id = b.id);
SELECT * FROM names a WHERE a.firstName != (SELECT b.id FROM names b WHERE a.id = b.id);
  # Sub-query that returns 0 rows
SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName FROM names b WHERE -a.id = b.id);
  # Sub-query that returns 1 row but multiple columns
SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName,b.lastname FROM names b WHERE a.id = b.id);
SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName,b.lastname FROM names b WHERE a.id = b.id);
  # Sub-query that returns > 1 rows but == 1 column
SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName FROM names b WHERE (a.id % 2) = (b.id % 2));
SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName FROM names b WHERE (a.id % 2) = (b.id % 2));
  # Sub-query that returns > 1 rows and  > 1 columns
SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName,b.lastname FROM names b WHERE (a.id % 2) = (b.id % 2));
SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName,b.lastname FROM names b WHERE (a.id % 2) = (b.id % 2));
  # Sub-query that returns a scalar NULL (== 1 row, == 1 column)
SELECT * FROM names a WHERE a.firstName = (SELECT NULL);
  # Sub-query that returns a NULL in == 1 row, > 1 columns
SELECT * FROM names a WHERE a.firstName = (SELECT NULL, NULL, firstname);
SELECT * FROM names a WHERE a.firstName != (SELECT NULL, NULL, firstname);
  # Sub-query that returns a NULL in  > 1 row, > 1 columns
SELECT * FROM names n1 WHERE n1.firstName = (SELECT NULL, n2.id, NULL from names n2);
SELECT * FROM names n1 WHERE n1.firstName != (SELECT NULL, n2.id, NULL from names n2);
  # Miscellaneous queries that issue error but used to assert fail due to an incorrect change to match_column_in_table.c
select id+2;
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
Added SET and/or Non-SET trigger on ^names named %ydboctoT*
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
[ERROR] PATH:LINENUM DATE TIME : Type mismatch: left INTEGER, right STRING
Error with syntax near (line 1, column 30):

SELECT * from names n1 where n1.id IN (SELECT * FROM names n2 WHERE n2.id = ((n1.id + 1) % 6));
                             ^^^^^
Error with syntax near (line 1, column 47):

SELECT * from names n1 where n1.id IN (SELECT * FROM names n2 WHERE n2.id = ((n1.id + 1) % 6));
                                              ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * from names n1 where n1.id IN (SELECT * FROM names n2 WHERE n2.id = ((n1.id + 1) % 6));
2|Cereal|Killer
-1
-1
0
0
0
0
1
.666666666666666666
2
-1
6
4
2
3
4
5
6
7
0
2
4
6
8
10
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
[ WARN] PATH:LINENUM DATE TIME : Ambiguous column name "ID": qualify name for safe execution
[ WARN] PATH:LINENUM DATE TIME : Ambiguous column name "ID": qualify name for safe execution
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
3
3
3
3
3
3
1
1
1
1
1
1
1
1
2
2
2
2
0
0
1
1
1
1
0
-1
-2
-3
-4
-5
ZeroCool
[ERROR] PATH:LINENUM DATE TIME : Type mismatch: left STRING, right INTEGER
Error with syntax near (line 1, column 29):

SELECT * FROM names a WHERE a.firstName = (SELECT b.id FROM names b WHERE a.id = b.id);
                            ^^^^^^^^^^^
Error with syntax near (line 1, column 51):

SELECT * FROM names a WHERE a.firstName = (SELECT b.id FROM names b WHERE a.id = b.id);
                                                  ^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM names a WHERE a.firstName = (SELECT b.id FROM names b WHERE a.id = b.id);
[ERROR] PATH:LINENUM DATE TIME : Type mismatch: left STRING, right INTEGER
Error with syntax near (line 1, column 29):

SELECT * FROM names a WHERE a.firstName != (SELECT b.id FROM names b WHERE a.id = b.id);
                            ^^^^^^^^^^^
Error with syntax near (line 1, column 52):

SELECT * FROM names a WHERE a.firstName != (SELECT b.id FROM names b WHERE a.id = b.id);
                                                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM names a WHERE a.firstName != (SELECT b.id FROM names b WHERE a.id = b.id);
0|Zero|Cool
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 51):

SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName,b.lastname FROM names b WHERE a.id = b.id);
                                                  ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 52):

SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName,b.lastname FROM names b WHERE a.id = b.id);
                                                   ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 51):

SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName,b.lastname FROM names b WHERE (a.id % 2) = (b.id % 2));
                                                  ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 52):

SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName,b.lastname FROM names b WHERE (a.id % 2) = (b.id % 2));
                                                   ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 51):

SELECT * FROM names a WHERE a.firstName = (SELECT NULL, NULL, firstname);
                                                  ^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 52):

SELECT * FROM names a WHERE a.firstName != (SELECT NULL, NULL, firstname);
                                                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 53):

SELECT * FROM names n1 WHERE n1.firstName = (SELECT NULL, n2.id, NULL from names n2);
                                                    ^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 54):

SELECT * FROM names n1 WHERE n1.firstName != (SELECT NULL, n2.id, NULL from names n2);
                                                     ^^^^
[ERROR] PATH:LINENUM DATE TIME : Unknown column: ID

select id+2;
       ^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select id+2;


